# py-somfy-sdn

./: README.md  decode.py  sdntool.py  setup.cfg  sniffer.py  tox.ini
somfy/: __init__.py  connector.py  enumutils.py  messages.py  payloads.py  recognizer.py  serial.py  utils.py
tests/: test_decoding.py
