[metadata]
name = python-somfy
version = 1.0.0
author = Aleksei Besogonov
author_email = b@alex.net
description = Python library for local control of Somfy SDN shades
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache-2.0
platforms = any
url = https://github.com/Cyberax/py-somfy-sdn
project_urls =
    Bug Tracker = https://github.com/Cyberax/py-somfy-sdn
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Topic :: Home Automation

[options]
zip_safe = False
packages = find:
requires =
    pyserial
    pyserial-asyncio
python_requires = >=3.11
install_requires =
    typing-extensions;python_version<'3.8'

[options.package_data]
* = py.typed

[flake8]
# To work with Black
# E501: line too long
# W503: Line break occurred before a binary operator
# E203: Whitespace before ':'
# D202 No blank lines allowed after function docstring
# W504 line break after binary operator
ignore =
    E501
